code/force-app/main/default/objects/PartyProfile/PartyProfile.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>