code/force-app/main/default/objects/PartyProfile/fields/Account_Key_Id_KYC__c.field-meta.xml
<CustomField>
    <fullName>Account_Key_Id_KYC__c</fullName>
    <externalId>true</externalId>
    <label>客戶識別碼 (KYC)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>