code/force-app/main/default/objects/PartyProfile/fields/Account_Name_Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Primary_Language__c</fullName>
    <formula>IF(
    Account.IsPersonAccount = TRUE, 
    Account.FirstName &amp; &quot; &quot; &amp; Account.LastName, 
    Account.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>客戶名稱 (主要語言)</label>
    <type>Text</type>
</CustomField>