code/force-app/main/default/objects/PartyProfile/fields/Account_Name_Secondary_Language__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Secondary_Language__c</fullName>
    <formula>Account.Account_Name_Secondary_Language__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>客戶名稱 (次要語言)</label>
    <type>Text</type>
</CustomField>