code/force-app/main/default/objects/PartyProfile/fields/Bank_Prof_Investor__c.field-meta.xml
<CustomField>
    <fullName>Bank_Prof_Investor__c</fullName>
    <formula>Account.PI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>是否有本行專業投資人資格</label>
    <type>Checkbox</type>
</CustomField>