code/force-app/main/default/objects/PartyProfile/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>本次申請案件類型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. 存款案件</fullName>
            </value>
            <value>
                <fullName>2. 授信案件</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>