code/force-app/main/default/objects/PartyProfile/fields/Check_Account_Key_Id__c.field-meta.xml
<CustomField>
    <fullName>Check_Account_Key_Id__c</fullName>
    <formula>if( Account.Account_Key_Id__c =  Account_Key_Id_KYC__c ,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>檢查帳戶客戶識別碼</label>
    <type>Checkbox</type>
</CustomField>