code/force-app/main/default/objects/PartyProfile/fields/Company_Emp_No__c.field-meta.xml
<CustomField>
    <fullName>Company_Emp_No__c</fullName>
    <label>公司人數</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>