code/force-app/main/default/objects/PartyProfile/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>公司型態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. 投資公司</fullName>
            </value>
            <value>
                <fullName>2. 一般企業</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>