code/force-app/main/default/objects/PartyProfile/fields/Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type__c</fullName>
    <label>授信類型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. 紓困案件且到期不續展</fullName>
            </value>
            <value>
                <fullName>2. 僅太陽能特殊融資案件</fullName>
            </value>
            <value>
                <fullName>3. 一般授信案件</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>