code/force-app/main/default/objects/PartyProfile/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <formula>Account.Customer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>客戶 ID</label>
    <type>Text</type>
</CustomField>