code/force-app/main/default/objects/PartyProfile/fields/Export_Percent__c.field-meta.xml
<CustomField>
    <fullName>Export_Percent__c</fullName>
    <label>外銷比例%</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>