code/force-app/main/default/objects/PartyProfile/fields/Export_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Export_Receipt__c</fullName>
    <label>外銷收款方式</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Export_Receipt</valueSetName>
    </valueSet>
</CustomField>