code/force-app/main/default/objects/PartyProfile/fields/First_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Date__c</fullName>
    <label>首次接洽日</label>
    <type>Date</type>
</CustomField>