code/force-app/main/default/objects/PartyProfile/fields/First_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Visit_Date__c</fullName>
    <label>首次拜訪/協訪日</label>
    <type>Date</type>
</CustomField>