code/force-app/main/default/objects/PartyProfile/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>TEXT( Account.Industry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>行業別</label>
    <type>Text</type>
</CustomField>