code/force-app/main/default/objects/PartyProfile/fields/Lastyr_Fin_Report_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Lastyr_Fin_Report_Revenue__c</fullName>
    <label>公司近一年完整年度財報營收 (億元)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>