code/force-app/main/default/objects/PartyProfile/fields/Latest_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Latest_Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>最新經營計劃</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Party Profiles</relationshipLabel>
    <relationshipName>Party_Profile_Account_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>