code/force-app/main/default/objects/PartyProfile/fields/Latest_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Contact_Date__c</fullName>
    <label>最近一次聯繫日</label>
    <type>Date</type>
</CustomField>