code/force-app/main/default/objects/PartyProfile/fields/Main_Oper_Model__c.field-meta.xml
<CustomField>
    <fullName>Main_Oper_Model__c</fullName>
    <label>主要營運模式</label>
    <type>TextArea</type>
</CustomField>