code/force-app/main/default/objects/PartyProfile/fields/Natural_Prepaid_Nature_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Natural_Prepaid_Nature_Third_Party__c</fullName>
    <label>銷售對象為自然人且非預付性質且非第三方支付公司</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>是</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>