code/force-app/main/default/objects/PartyProfile/fields/Next_Review_Month__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Month__c</fullName>
    <formula>Account.Next_Review_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>下次應辦理年審月份</label>
    <type>Text</type>
</CustomField>