code/force-app/main/default/objects/PartyProfile/fields/Non_Hedge_Fin_Trans_Need__c.field-meta.xml
<CustomField>
    <fullName>Non_Hedge_Fin_Trans_Need__c</fullName>
    <label>有非避險金融交易額度需求</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Non_Hedge_Fin_Trans_Need</valueSetName>
    </valueSet>
</CustomField>