code/force-app/main/default/objects/PartyProfile/fields/OBU_Company__c.field-meta.xml
<CustomField>
    <fullName>OBU_Company__c</fullName>
    <label>公司為OBU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>是</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>