code/force-app/main/default/objects/PartyProfile/fields/Other_Bank_Cash_Convert_TWD__c.field-meta.xml
<CustomField>
    <fullName>Other_Bank_Cash_Convert_TWD__c</fullName>
    <label>他行現金折台幣 (元)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>