code/force-app/main/default/objects/PartyProfile/fields/Other_Bank_Factoring__c.field-meta.xml
<CustomField>
    <fullName>Other_Bank_Factoring__c</fullName>
    <label>他行曾/已承作應收帳款融資</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>是</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>