code/force-app/main/default/objects/PartyProfile/fields/Other_Bank_Prof_Investor__c.field-meta.xml
<CustomField>
    <fullName>Other_Bank_Prof_Investor__c</fullName>
    <label>是否有他行專業投資人資格</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>是</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>