code/force-app/main/default/objects/PartyProfile/fields/Other_Overseas_Locations_Remark__c.field-meta.xml
<CustomField>
    <fullName>Other_Overseas_Locations_Remark__c</fullName>
    <label>其他海外據點備註</label>
    <type>TextArea</type>
</CustomField>