code/force-app/main/default/objects/PartyProfile/fields/Other_Potential__c.field-meta.xml
<CustomField>
    <fullName>Other_Potential__c</fullName>
    <label>其他潛力</label>
    <type>TextArea</type>
</CustomField>