code/force-app/main/default/objects/PartyProfile/fields/Outsourcing_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Outsourcing_Ratio__c</fullName>
    <label>外購比例%</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>