code/force-app/main/default/objects/PartyProfile/fields/Own_Factory_Include_Affiliates__c.field-meta.xml
<CustomField>
    <fullName>Own_Factory_Include_Affiliates__c</fullName>
    <label>是否有自有工廠(含關係企業)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>是</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>