code/force-app/main/default/objects/PartyProfile/fields/Payment_Recipients_AAC_NDPC__c.field-meta.xml
<CustomField>
    <fullName>Payment_Recipients_AAC_NDPC__c</fullName>
    <label>收款對象眾多且有自動銷帳或多元化收款通路需求</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>是</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>