code/force-app/main/default/objects/PartyProfile/fields/Payroll__c.field-meta.xml
<CustomField>
    <fullName>Payroll__c</fullName>
    <formula>Account.Payroll__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>本行薪轉戶</label>
    <type>Checkbox</type>
</CustomField>