code/force-app/main/default/objects/PartyProfile/fields/PI_Open_Account__c.field-meta.xml
<CustomField>
    <fullName>PI_Open_Account__c</fullName>
    <label>PI開戶</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PI_Open_Account</valueSetName>
    </valueSet>
</CustomField>