code/force-app/main/default/objects/PartyProfile/fields/Product_Potential__c.field-meta.xml
<CustomField>
    <fullName>Product_Potential__c</fullName>
    <label>產品潛力</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Potential</valueSetName>
    </valueSet>
</CustomField>