code/force-app/main/default/objects/PartyProfile/fields/Receivable_Business_Need__c.field-meta.xml
<CustomField>
    <fullName>Receivable_Business_Need__c</fullName>
    <label>是否有應收帳款業務需求</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>是</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>