code/force-app/main/default/objects/PartyProfile/fields/Registered_Country__c.field-meta.xml
<CustomField>
    <fullName>Registered_Country__c</fullName>
    <formula>Text(Account.Registered_Address__CountryCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>註冊地國家別</label>
    <type>Text</type>
</CustomField>