code/force-app/main/default/objects/PartyProfile/fields/Retail_Clerks_Deposit_Needs__c.field-meta.xml
<CustomField>
    <fullName>Retail_Clerks_Deposit_Needs__c</fullName>
    <label>有門市店員或外務營收現金存款需求(例:物流業者)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>是</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>