code/force-app/main/default/objects/PartyProfile/fields/Ship_60Days_Known_Mfrs__c.field-meta.xml
<CustomField>
    <fullName>Ship_60Days_Known_Mfrs__c</fullName>
    <label>出貨給國內外知名廠商且天期&gt;60天</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>是</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>