code/force-app/main/default/objects/PartyProfile/fields/Ship_To_Sales_Target_SC_Fin__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Sales_Target_SC_Fin__c</fullName>
    <label>出貨給本行配合供應鏈融資專案的銷貨對象 (特力屋、喬山等)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>是</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>