code/force-app/main/default/objects/PartyProfile/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <formula>TEXT( Account.Sub_Industry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>行業別子類</label>
    <type>Text</type>
</CustomField>