code/force-app/main/default/objects/PartyProfile/fields/TCRI__c.field-meta.xml
<CustomField>
    <fullName>TCRI__c</fullName>
    <formula>Account.TCRI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCRI</label>
    <type>Text</type>
</CustomField>