code/force-app/main/default/objects/PartyProfile/fields/TMRAC__c.field-meta.xml
<CustomField>
    <fullName>TMRAC__c</fullName>
    <formula>Account.TMRAC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMRAC</label>
    <type>Checkbox</type>
</CustomField>