code/force-app/main/default/objects/PartyProfile/fields/Transaction_Currency__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Currency__c</fullName>
    <label>交易幣別</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transaction_Currency</valueSetName>
    </valueSet>
</CustomField>