code/force-app/main/default/objects/PartyProfile/recordTypes/Corporate_KYC_Domestic.recordType-meta.xml
<RecordType>
    <fullName>Corporate_KYC_Domestic</fullName>
    <active>true</active>
    <label>法人KYC國內</label>
</RecordType>