code/force-app/main/default/objects/PartyProfile/recordTypes/Corporate_KYC_Overseas.recordType-meta.xml
<RecordType>
    <fullName>Corporate_KYC_Overseas</fullName>
    <active>true</active>
    <label>法人KYC海外</label>
</RecordType>