code/force-app/main/default/objects/PartyProfile/listViews/All_PartyProfiles.listView-meta.xml
<ListView>
    <fullName>All_PartyProfiles</fullName>
    <filterScope>Everything</filterScope>
    <label>All Party Profiles</label>
</ListView>